--- a/day1/forms.html
+++ b/day1/forms.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="forms.css">
 </head> 
 <body>  
-    <h1> <center> SIGN IN FORM</center></h1>
+    <h1> <center> SIGNUP FORM</center></h1>
 
     <form>
 
