--- a/day2/countapp.html
+++ b/day2/countapp.html
@@ -13,9 +13,9 @@
         <hr>
 
             <div id="divbutton">
-                <button onclick="add()">Add(+)</button>
-                <button onclick="reset()">Reset(0)</button>
-                <button onclick="sub()">Sub(-)</button>
+                <button id="b1"onclick="add()">Add(+)</button>
+                <button id="b2"onclick="reset()">Reset(0)</button>
+                <button id="b3"onclick="sub()">Sub(-)</button>
             </div>
     </div>
     <script src="./countapp.js"></script>
