--- a/day1/forms.html
+++ b/day1/forms.html
@@ -9,8 +9,8 @@
 <body>  
     <h1> <center> SIGNUP FORM</center></h1>
 
-    <form>
-
+    <form >
+        <div id="main">
         <label for="First Name">First Name: </label>
         <input type="text"placeholder="Enter your first name"> <br></br>
         <label for="Last Name">Last Name: </label>
@@ -30,6 +30,7 @@
         <label > age: </label>
         <input type="number" placeholder="Enter your age"><br></br>
         submit here: <input type="submit" value="submit">
+        </div>
     </form>
 
 </body>
