--- a/day1/forms.html
+++ b/day1/forms.html
@@ -11,23 +11,23 @@
 
     <form >
         <div id="main">
-        <label for="First Name">First Name: </label>
+        <label for="First Name">First Name: </label><br>
         <input type="text"placeholder="Enter your first name"> <br></br>
-        <label for="Last Name">Last Name: </label>
+        <label for="Last Name">Last Name: </label><br>
         <input type="text"placeholder="Enter your last name"><br></br>
-        <label for="Email">Email: </label>
+        <label for="Email">Email: </label><br>
         <input type="email" placeholder="Enter your email"><br></br>
-        <label for="Gender">Gender: </label>
+        <label for="Gender">Gender: </label><br>
         Male<input type="radio" name="Gender">Female<input type="radio" name="Gender"><br></br>
-        <label>Which games you like?</label>
+        <label>Which games you like?</label><br>
         <input type="checkbox">cricket<input type="checkbox">football<input type="checkbox">hockey<br></br>
-        <label >Mobile Number: </label>
+        <label >Mobile Number: </label><br>
         <input type="tel" placeholder="Enter your mobile number"><br></br>
-        <label>Date of birth: </label>
+        <label>Date of birth: </label><br>
         <input type="date"><br></br>
-        <label>password: </label>
+        <label>password: </label><br>
         <input type="password" placeholder="Enter your password"><br></br>
-        <label > age: </label>
+        <label > age: </label><br>
         <input type="number" placeholder="Enter your age"><br></br>
         submit here: <input type="submit" value="submit">
         </div>
