--- a/day2/box.html
+++ b/day2/box.html
@@ -16,6 +16,8 @@
         <div id="divbox8">box8</div>
         <div id="divbox9">box9</div>
         <div id="divbox10">box10</div>
+        <div id="divbox11">box11</div>
+        <div id="divbox12">box12</div>
         
 </body>
 </html>
